--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 
 <body>
+    <div class="header_logo">
+        <div>
+            <img src="./img/Logo.png" alt="Logo" class="logo_image">
+            <span class="logo_text">Toobolist</span>
+        </div>
+    </div>
 
+    <main></main>
+
+    <footer></footer>
 </body>
 
 </html>
