add "add task\select"

--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
         </div>
     </div>
 
-    <main></main>
+    <main>
+        <div class="main_planner">
+            <div class="options">
+                <button id="add_task">Add task</button>
+                <button id="add_section">Add section</button>
+            </div>
+            <hr style="border-color: #d8dce2;">
+
+
+        </div>
+    </main>
 
     <footer></footer>
 </body>
