--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
                 <button id="add_section">Add section</button>
             </div>
             <hr style="border-color: #d8dce2;">
-
+            <div class="new_task">
+                <span>&#11206;</span>
+                <span><strong>New Task</strong></span>
+            </div>
+            <span class="check_p">&check; </span>
 
         </div>
     </main>
