--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
                 <button id="add_task">Add task</button>
                 <button id="add_section">Add section</button>
             </div>
-            <hr style="border-color: #d8dce2;">
-            <div class="new_task">
-                <span>&#11206;</span>
-                <span><strong>New Task</strong></span>
+            <div class="new_task_list">
+                &#11206;
+                New task
             </div>
             <span class="check_p">&check; </span>
 
