--- a/index.html
+++ b/index.html
@@ -22,11 +22,36 @@
                 <button id="add_task">Add task</button>
                 <button id="add_section">Add section</button>
             </div>
-            <div class="new_task_list">
+            <div class="list">
                 &#11206;
                 New task
             </div>
-            <span class="check_p">&check; </span>
+            <div>
+                <span class="check_p">&check; </span>
+                Quarterly Newsletter
+                <button class="editorial_button">Editorial</button>
+            </div>
+            <div class="list">
+                &#11206;
+                Today
+            </div>
+            <div>
+                <span class="check_p">&check; </span>
+                Recruiting blog post
+                <button class="editorial_button">Editorial</button>
+            </div>
+            <div>
+                <span class="check_p">&check; </span>
+                Mobile app launch
+                <button class="q1goals_button">Q1 Goals</button>
+            </div>
+            <div>
+                <span class="check_p">&check; </span>
+                Interview John H.
+                <button class="recruiting_button">Recruiting</button>
+            </div>
+
+
 
         </div>
     </main>
