--- a/index.html
+++ b/index.html
@@ -46,10 +46,41 @@
                 <button class="q1goals_button">Q1 Goals</button>
             </div>
             <div>
-                <span class="check_p">&check; </span>
+                <span class="check_n">&#10005; </span>
                 Interview John H.
                 <button class="recruiting_button">Recruiting</button>
             </div>
+            <div>
+                <span class="check_p">&check; </span>
+                Summit update to mobile storefronts
+                <button class="mobile_button">Mobile</button>
+            </div>
+            <div class="list">
+                &#11206;
+                Upcoming
+            </div>
+            <div>
+                <span class="check_n">&#10005; </span>
+                Schedule meeting with Alex
+            </div>
+            <div>
+                <span class="check_p">&check; </span>
+                Homepage refresh
+                <button class="website_button">Website</button>
+            </div>
+            <div>
+                <span class="check_p">&check; </span>
+                Onboard new Sales team members
+                <button class="sales_button">Sales</button>
+            </div>
+            <div>
+                <span class="check_p">&check; </span>
+                Review editorial calendar
+                <button class="editorial_button">Editorial</button>
+            </div>
+
+
+
 
 
 
