--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
 </head>
 
 <body>
+    <!--header-->
     <div class="header_logo">
         <div>
             <img src="./img/Logo.png" alt="Logo" class="logo_image">
             <span class="logo_text">Toobolist</span>
         </div>
     </div>
-
+    <!--main-->
     <main>
         <div class="main_planner">
             <div class="options">
                 <button id="add_task">Add task</button>
                 <button id="add_section">Add section</button>
             </div>
+            <!--new task-->
             <div class="list">
                 &#11206;
                 New task
@@ -31,6 +33,7 @@
                 Quarterly Newsletter
                 <button class="editorial_button">Editorial</button>
             </div>
+            <!--today-->
             <div class="list">
                 &#11206;
                 Today
@@ -55,6 +58,7 @@
                 Summit update to mobile storefronts
                 <button class="mobile_button">Mobile</button>
             </div>
+            <!--upcoming-->
             <div class="list">
                 &#11206;
                 Upcoming
@@ -78,16 +82,8 @@
                 Review editorial calendar
                 <button class="editorial_button">Editorial</button>
             </div>
-
-
-
-
-
-
         </div>
     </main>
-
-    <footer></footer>
 </body>
 
 </html>
